third_party/WebKit/public/web/WebConsoleMessage.h
@@ -32,7 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef WebConsoleMessage_h
 #define WebConsoleMessage_h
 
-#include "../platform/WebString.h"
+#include "public/platform/WebString.h"
 
 namespace blink {
 
