third_party/WebKit/public/web/WebFormControlElement.h
@@ -32,7 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef WebFormControlElement_h
 #define WebFormControlElement_h
 
-#include "../platform/WebString.h"
+#include "public/platform/WebString.h"
 #include "WebElement.h"
 #include "WebFormElement.h"
 
