third_party/WebKit/public/web/WebFormElement.h
@@ -32,7 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef WebFormElement_h
 #define WebFormElement_h
 
-#include "../platform/WebVector.h"
+#include "public/platform/WebVector.h"
 #include "WebElement.h"
 
 namespace blink {
